--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ on:
 env:
   AWS_REGION: us-east-1
   TEAR_DOWN: no
+  RUN_LINTER: false
 
 jobs:
   Run-Linter:
@@ -21,22 +22,26 @@ jobs:
       - run: echo "Branch is ${{ github.ref }}, repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v3
-
+      - name: Get submodules
+        run: git submodule update --init 
       - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
       - name: Run linter
+        if: ${{ env.RUN_LINTER == 'true' }}
         run: |
           cfn-lint ${{ github.workspace }}/cloudformation/*.yml
       - run: echo "Job Status is ${{ job.status }}."
   Run-FortiDevSec:
     runs-on: self-hosted
-    needs: Explore-GitHub-Actions
+    needs: Run-Linter
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
+      - name: Get submodules
+        run: git submodule update --init
       - run: |
           env | grep -E "GITHUB_ACTIONS|GITHUB_RUN_NUMBER|GITHUB_REF_NAME|GITHUB_SHA" > /tmp/env
           docker pull registry.fortidevsec.forticloud.com/fdevsec_sast:latest
